rank gap issue fixed

--- a/src/styles/ProjectsSection.css
+++ b/src/styles/ProjectsSection.css
@@ -398,9 +398,12 @@
   /* Reduced from 1.1rem */
   color: #111827;
   letter-spacing: -0.01em;
-  padding-left: 35px;
-  /* Added to prevent overlap with number */
+  /* padding-left: 35px; REMOVED - Applied via class now */
   line-height: 1.4;
+}
+
+.project-title.with-rank {
+  padding-left: 35px;
 }
 
 .project-serial-number {
@@ -418,7 +421,7 @@
   justify-content: center;
   font-size: 11px;
   font-weight: 700;
-  border-radius: 50%; 
+  border-radius: 50%;
 }
 
 .project-description {
